--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,3 +1,5 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('https://fonts.googleapis.com/css?family=Open Sans|Righteous');
 body, ul, h3{
     margin: 0px;
     font-family: 'Open Sans';
