--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,29 +1,44 @@
 
-body, ul, h3{
+ ul, h3{
     margin: 0px;
     font-family: 'Open Sans';
 }
 
 body{
+    left:3% ;
+    right: 3%;
   background-color: #eee;
+  font-family: 'Open Sans';
 }
-
+h4{
+    text-align: center;
+  color:white;
+}
 h3{
   text-align: center;
-  color: green;
+  color:black;
 }
-
+#aln
+{
+align-content: center;
+}
+ 
+#features
+{
+    background-color:lightblue;
+}
 header{
-    position: fixed;;
     position: fixed;
+    left: 0%;
+    width: 100%;
     top: 0;
 }
 
-footer{
-    position: fixed;
+footer{position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
+    
     color: #fff;
 }
 
@@ -53,7 +68,7 @@ footer{
 }
 
 nav{
-    background-color: green;
+    background-color:black;
 }
 
 nav ul{
@@ -83,10 +98,11 @@ nav ul li a{
 .infoBox{
     height: auto;
     margin-top: 5px;
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 10px;
+    border-color: blue;
     box-sizing: border-box;
-    background-color: #fff;
+    background-color:lightblue;
 }
 
 .desc{
@@ -97,9 +113,11 @@ nav ul li a{
 .one-column{
     margin-top: 10px;
     border-radius: 5px;
-    background-color: #fff;
+    background-color:cornflowerblue;
     padding: 10px;
+    
 }
+
 
 .features i{
 	font-size: 70px !important;
@@ -115,11 +133,7 @@ nav ul li a{
   cursor: pointer;
 }.mySlides {display:none;
 }
-#pic
-{
-    width:100%;
-    height: 500 px;
-}
+
 
 @media screen and (min-width: 853px){
     nav {
@@ -127,13 +141,7 @@ nav ul li a{
         justify-content: space-between;
         flex-flow: row wrap;
     }
-    #pic
-{      
-        width:100%;
-        height: 200 px;
-        flex: 100%;
     
-}
     nav ul{
         display: flex;
         flex-flow: row wrap;
@@ -175,13 +183,6 @@ nav ul li a{
     }
     .hamburger, .hamburger span{
         display:block;
-    }#pic
-    {
-       
-            width:100%;
-            height: 200 px;
-            flex: 100%;
-       
     }
     #menu{
         display: none;
