--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -7,7 +7,7 @@
 body{
     left:3% ;
     right: 3%;
-  background-color: #eee;
+  background-image: url('login-img.jpeg') no-repeat;
   font-family: 'Open Sans';
 }
 h4{
@@ -100,7 +100,7 @@ nav ul li a{
     margin-top: 5px;
     border-radius: 15px;
     padding: 10px;
-    border-color: blue;
+    border-color:black;
     box-sizing: border-box;
     background-color:lightblue;
 }
