--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,44 +1,28 @@
-
- ul, h3{
+body, ul, h3{
     margin: 0px;
     font-family: 'Open Sans';
 }
 
 body{
-    left:3% ;
-    right: 3%;
-  background-image: url('login-img.jpeg') no-repeat;
-  font-family: 'Open Sans';
+  background-color: #eee;
 }
-h4{
-    text-align: center;
-  color:white;
-}
+
 h3{
   text-align: center;
-  color:black;
+  color: green;
 }
-#aln
-{
-align-content: center;
-}
- 
-#features
-{
-    background-color:lightblue;
-}
+
 header{
-    position: fixed;
-    left: 0%;
-    width: 100%;
+    position: -webkit-sticky;
+    position: sticky;
     top: 0;
 }
 
-footer{position: fixed;
+footer{
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    
     color: #fff;
 }
 
@@ -68,7 +52,7 @@ footer{position: fixed;
 }
 
 nav{
-    background-color:black;
+    background-color: green;
 }
 
 nav ul{
@@ -98,11 +82,10 @@ nav ul li a{
 .infoBox{
     height: auto;
     margin-top: 5px;
-    border-radius: 15px;
+    border-radius: 5px;
     padding: 10px;
-    border-color:black;
     box-sizing: border-box;
-    background-color:lightblue;
+    background-color: #fff;
 }
 
 .desc{
@@ -113,11 +96,9 @@ nav ul li a{
 .one-column{
     margin-top: 10px;
     border-radius: 5px;
-    background-color:cornflowerblue;
+    background-color: #fff;
     padding: 10px;
-    
 }
-
 
 .features i{
 	font-size: 70px !important;
@@ -133,7 +114,11 @@ nav ul li a{
   cursor: pointer;
 }.mySlides {display:none;
 }
-
+#pic
+{
+    width:100%;
+    height: 500 px;
+}
 
 @media screen and (min-width: 853px){
     nav {
@@ -141,7 +126,13 @@ nav ul li a{
         justify-content: space-between;
         flex-flow: row wrap;
     }
+    #pic
+{      
+        width:100%;
+        height: 200 px;
+        flex: 100%;
     
+}
     nav ul{
         display: flex;
         flex-flow: row wrap;
@@ -183,6 +174,13 @@ nav ul li a{
     }
     .hamburger, .hamburger span{
         display:block;
+    }#pic
+    {
+       
+            width:100%;
+            height: 200 px;
+            flex: 100%;
+       
     }
     #menu{
         display: none;
